<resources>
    <string name="app_name">Haptic Feedback Survey App</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="v1">Version 1</string>
    <string name="v2">Version 2</string>
    <string name="v3">Version 3</string>
    <string name="v4">Version 4</string>
    <string name="home_section">
        Hi! Thank you for your participation to this project.
        \nYou will be interacting with six (6) different Android© widgets, presented each in four (4)
        distinct versions, to which haptic feedback has been added.
        At the same time you will be evaluating them in the corresponding pages of the online survey
        provided by the authors. Please, keep it open at all times, until you have interacted with the last widget.
        \n\nMake sure to avoid any possible distractions while doing through the application; we highly
        suggest you wear headphones and play some music, in order to not be biased by the noise
        produced by the smartphone\'s vibrations.
        \n\nMore instructions are presented in the first page of the online survey.
        Whenever you are ready, scroll the page from right to left to begin.
        Remember: there is no time limit on the trial, so do not rush your answers!
    </string>
    <string name="button_section"><b>BUTTON SECTION</b>
        \nThe <i>version 1</i> gives no feedback and it is not part of the survey.
        \n\nWhen you feel ready, start to interact with the <i>version 2</i> by pressing/realising it and answer the questions related to it.
        \nThen, move to <i>version 3</i> and then <i>version 4</i>.
        \nWhen you have finished to answer the questions related to this section, move to the next page by swiping from right to left.
    </string>
    <string name="slider_section"><b>SEEK BAR SECTION</b>
        \nThe <i>version 1</i> gives no feedback and it is not part of the survey.
        \n\nWhen you feel ready, start to interact with the <i>version 2</i> by sliding it and answer the questions related to it.
        \nThen, move to <i>version 3</i> and then <i>version 4</i>.
        \nWhen you have finished to answer the questions related to this section, move to the next page by swiping from right to left.
   </string>
    <string name="checkbox_section"><b>CHECKBOX SECTION</b>
        \nThe <i>version 1</i> gives no feedback and it is not part of the survey.
        \n\nWhen you feel ready, start to interact with the <i>version 2</i> by selecting/deselecting it and answer the questions related to it.
        \nThen, move to <i>version 3</i> and then <i>version 4</i>.
        \nWhen you have finished to answer the questions related to this section, move to the next page by swiping from right to left.
    </string>
    <string name="toggle_section"><b>TOGGLE SECTION</b>
        \nThe <i>version 1</i> gives no feedback and it is not part of the survey.
        \n\nWhen you feel ready, start to interact with the <i>version 2</i> by turning it on/off and answer the questions related to it.
        \nThen, move to <i>version 3</i> and then <i>version 4</i>.
        \nWhen you have finished to answer the questions related to this section, move to the next page by swiping from right to left.
    </string>
    <string name="spinner_section"><b>SPINNER SECTION</b>
        \nThe <i>version 1</i> gives no feedback and it is not part of the survey.
        \nThe already selected elements if selected again give no feedback.
        \n\nWhen you feel ready, start to interact with the <i>version 2</i> by selecting items and answer the questions related to it.
        \nThen, move to <i>version 3</i> and then <i>version 4</i>.
        \nWhen you have finished to answer the questions related to this section, move to the next page by swiping from right to left.
    </string>
    <string name="rating_section"><b>RATING BAR SECTION</b>
        \nThe <i>version 1</i> gives no feedback and it is not part of the survey.
        \n\nWhen you feel ready, start to interact with the <i>version 2</i> by tapping it and answer the questions related to it.
        \nThen, move to <i>version 3</i> and then <i>version 4</i>.
        \nWhen you have finished to answer the questions related to this section, move to the next page by swiping from right to left.
    </string>
    <string name="end_section">You have done!
    \nRemember to submit the survey!</string>
    <string name="greetings">Thank you very much for your time, \nyour answers will be helpful!</string>
    <string name="credits">
        Alessandro Iop 〉 aiop@kth.se
        \nFederico Landorno 〉 landorno@kth.se
        \nDH2670 Haptics, Tactile and Tangible Interaction
        \nInteractive Media Technology
        \nKTH, Stockholm, Sweden
    </string>

</resources>
