<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.labtemplate.tactiles.tactilelabtemplate.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:text="@string/button_section"
        android:textColor="#111111"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view2_button1"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="137dp"
        android:text="@string/v1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/view2_button2"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="137dp"
        android:text="@string/v2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2_button1" />

    <Button
        android:id="@+id/view2_button3"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="137dp"
        android:text="@string/v3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2_button2" />

    <Button
        android:id="@+id/view2_button4"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="137dp"
        android:text="@string/v4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2_button3" />



</android.support.constraint.ConstraintLayout>